<resources>
    <string name="app_name">HelloWorld</string>
    <string name="scrim">SCRIM</string>
    <string name="register">PENDAFTARAN</string>
    <string name="nama_penyelenggara">Nama Penyelenggara</string>
    <string name="jenis_gim">Jenis Gim</string>
    <string name="date">Tanggal Pelaksanaan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="silver_member">SILVER MEMBER</string>
    <string name="personal_detail">Personal Details</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth </string>
    <string name="phone_number">Phone Number </string>
    <string name="account_details">Account Details</string>
    <string name="password">Password</string>
    <string name="detail">Detail</string>
    <string name="nama_event">Nama Event</string>
    <string name="tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="tanggal_akhir_pelaksanaan">Tanggal Akhir Pelaksanaan</string>
    <string name="nama_tim">Nama Tim</string>
    <string name="tanggal_akhir_pendaftaran">Tanggal Akhir Pendaftaran</string>
    <string name="nama_anggota">Nama Anggota</string>
    <string name="nomor_perwakilan">Nomor Perwakilan</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="tournament_day">Tournament Day :</string>
    <string name="venue">Venue</string>
    <string name="daftar">Daftar</string>
    <string name="event_lainnya">Event Lainnya</string>
    <string name="change_password">Change Password</string>
</resources>