<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profil"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/valorant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Logout"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            android:id="@+id/tv_name_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profil"
            android:textStyle="bold"
            tools:text="Yonanda" />

        <TextView
            android:id="@+id/tv_id_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_admin"
            tools:text="ID 000214356" />



        <TextView
            android:id="@+id/tv_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/personal_detail"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_id_admin"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_personal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="267dp">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/edt_username_admin"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:layout_below="@id/tv_username"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:text="Mr.Xroy" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_username_admin"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/edt_email_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/tv_email"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="14sp"
                    tools:text="tuanroy77@gmail.com" />

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_email_admin"
                    android:layout_marginTop="10dp"
                    android:text="@string/date_of_birth"
                    app:drawableEndCompat="@drawable/ic_date_24" />

                <EditText
                    android:id="@+id/edt_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_birth"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    tools:text="11/12/2002" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_email_admin"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    app:drawableEndCompat="@drawable/ic_baseline_phone_24" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_phone"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="12sp"
                    tools:text="08xxxxxxxxxx" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dtl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/account_details"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cv_personal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dtl_account"
            tools:layout_editor_absoluteX="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/acc_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Email" />

                <EditText
                    android:id="@+id/acc_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/acc_email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    tools:text="tuanroy77@gmail.com" />

                <TextView
                    android:id="@+id/acc_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/acc_edt_email"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/acc_edt_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/acc_pw"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    tools:text="" />

                <TextView
                    android:id="@+id/acc_change_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/acc_edt_pw"
                    android:text="@string/change_password" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/acc_change_pw"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    tools:text="" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
